detect mobile for svg background + issue about scroll bar on phone + go up arrow responsive on about page

--- a/src/app/go-up/go-up.component.scss
+++ b/src/app/go-up/go-up.component.scss
@@ -19,6 +19,13 @@
 
 @media (max-width: 1000px) {
     .go-up {
+        width: 10vw;
+        height: 10vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .go-up {
         width: 15vw;
         height: 15vw;
     }
