nice design idea !! + new images (remove gif)

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,25 +2,25 @@
     <div class="content-left">
         <a href="https://www.linkedin.com/in/rémi-jara-516b30222/" target="_blank">
             <div class="link-content">
-                <img src="assets/images/linkedin.png" alt="LinkedIn">
+                <img src="assets/images/linkedin.png" alt="LinkedIn" id="logo">
                 <p>LinkedIn</p>
             </div>
         </a>
         <a href="https://github.com/icepick4" target="_blank">
             <div class="link-content">
-                <img src="assets/images/github.png" alt="GitHub">
+                <img src="assets/images/github.png" alt="GitHub" id="logo">
                 <p>GitHub</p>
             </div>
         </a>
         <a href="mailto: remi.jara4@gmail.com" target="_blank">
             <div class="link-content">
-                <img src="assets/images/email.png" alt="Email">
+                <img src="assets/images/email.png" alt="Email" id="logo">
                 <p>remi.jara4@gmail.com</p>
             </div>
         </a>
         <a>
             <div class="link-content">
-                <img src="assets/images/phone.png" alt="Phone">
+                <img src="assets/images/phone.png" alt="Phone" id="logo">
                 <p>07 71 67 53 62</p>
             </div>
         </a>
