--- a/src/app/go-up/go-up.component.html
+++ b/src/app/go-up/go-up.component.html
@@ -1,5 +1,5 @@
 <a (click)="onActivate($event)" id="go-up">
     <div class="go-up">
-        <img src="assets/images/arrow_up.svg" alt="Go up">
+        <img src="assets/images/arrow.png" alt="Go up" id="logo">
     </div>
 </a>
