--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    height: 80%;
+    height: 70%;
     background: rgb(141, 114, 225, 0);
     border-radius: 20px;
     padding: 20px;
@@ -44,6 +44,7 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        gap: 20px;
     }
     animation: appear 1s ease-in-out;
 }
@@ -66,7 +67,7 @@ body {
         }
         .link-content {
             img {
-                width: 7vw;
+                width: 6vw;
             }
         }
     }
@@ -79,7 +80,7 @@ body {
         }
         .link-content {
             img {
-                width: 10vw;
+                width: 8vw;
             }
         }
     }
@@ -92,7 +93,7 @@ body {
         }
         .link-content {
             img {
-                width: 13vw;
+                width: 10vw;
             }
         }
     }
@@ -105,7 +106,7 @@ body {
         }
         .link-content {
             img {
-                width: 17vw;
+                width: 12vw;
             }
         }
     }
@@ -119,6 +120,21 @@ body {
         .link-content {
             img {
                 width: 20vw;
+            }
+        }
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    .content {
+        .link-content {
+            border-radius: 20px;
+            background: #8d72e1;
+            p {
+                color: #fff;
+            }
+            img {
+                width: 12vw;
             }
         }
     }
