--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -2,9 +2,11 @@
     margin: 40px;
     width: 37vw;
     height: 30vw;
-    border-radius: 50% 50% 0% 50% / 50% 50% 0% 50%;
-    // border-radius: 100%;
-    border: 5px solid #8d72e1;
+    border-radius: 30px;
+    border: 5px solid transparent;
+    border-image: url("/assets/images/border2.png") 100 round;
+    border-image-width: 20px;
+    border-image-outset: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,13 +15,12 @@
     background-color: #fff;
     .title {
         font-weight: 600;
-        width: 50%;
+        width: 100%;
         text-align: center;
         overflow: hidden;
         a {
             font-size: 2rem;
         }
-        margin-top: 1rem;
     }
     a {
         color: #8d72e1;
@@ -36,8 +37,6 @@
         .image img {
             width: 80%;
             object-fit: cover;
-            border-radius: 5px;
-            border: 4px solid #000;
             margin: 10px;
             margin-bottom: 50px;
         }
@@ -90,8 +89,11 @@
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    border-radius: 50%;
-    border: 5px solid #8d72e1;
+    border-radius: 5px;
+    border: 5px solid transparent;
+    border-image: url("/assets/images/border2.png") 100 round;
+    border-image-width: 10px;
+    border-image-outset: 5px;
     padding: 25px;
     height: 100%;
     width: 20%;
