--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -33,10 +33,16 @@
     &__image {
         object-fit: cover;
         border-radius: 5px;
-        border: 4px solid #000;
         margin: 10px;
         margin-bottom: 50px;
-        transform: scale(1.3);
+        img {
+            width: 50%;
+            margin: 0 auto;
+        }
+        //center the image
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__links {
