--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 body {
-    // background-color: #df7e66;
+    background-color: #df7e66;
     height: 100vh;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    //background gradient}
 }
 
 @font-face {
@@ -42,6 +41,14 @@ a {
             transform: translate3d(0, 0, 0);
         }
     }
+}
+
+img:not(#logo) {
+    border-radius: 5px;
+    border: 5px solid transparent;
+    border-image: url("/assets/images/border2.png") 100 round;
+    border-image-width: 10px;
+    border-image-outset: 5px;
 }
 
 path {
