--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -35,7 +35,7 @@
         justify-content: center;
         width: 70%;
         .image img {
-            width: 80%;
+            width: 90%;
             object-fit: cover;
             margin: 10px;
             margin-bottom: 50px;
@@ -53,7 +53,7 @@
         .text {
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
             height: 10vw;
             .tools {
@@ -96,14 +96,9 @@
     border-image-outset: 5px;
     padding: 25px;
     height: 100%;
-    width: 20%;
+    width: 40%;
     position: relative;
     opacity: 0;
-    img {
-        width: 30px;
-        height: 30px;
-        margin-left: -10px;
-    }
     .button {
         background-color: #fff;
         border: none;
@@ -116,16 +111,6 @@
         &:hover {
             background-color: #333;
             color: #fff;
-        }
-    }
-
-    .link {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        img {
-            margin-left: 10px;
         }
     }
 
@@ -147,10 +132,6 @@
         &::after {
             width: 70%;
         }
-    }
-
-    a {
-        padding: 0;
     }
     transition: all 0.3s ease-in-out;
 }
@@ -177,11 +158,6 @@
         width: 45vw;
         height: 33vw;
         .content {
-            .image {
-                img {
-                    width: 70%;
-                }
-            }
             .tools {
                 p {
                     font-size: 1rem;
@@ -192,10 +168,6 @@
 
     .move-left {
         transform: translateX(-5%);
-    }
-
-    .footer {
-        width: 28%;
     }
 }
 
@@ -223,11 +195,6 @@
         width: 55vw;
         height: 48vw;
         .content {
-            .image {
-                img {
-                    width: 70%;
-                }
-            }
             .text {
                 .tools {
                     p {
@@ -248,11 +215,6 @@
         width: 65vw;
         height: 53vw;
         .content {
-            .image {
-                img {
-                    width: 75%;
-                }
-            }
             .text {
                 .tools {
                     p {
@@ -293,11 +255,6 @@
         width: 80vw;
         height: 68vw;
         .content {
-            .image {
-                img {
-                    width: 75%;
-                }
-            }
             .text {
                 .tools {
                     p {
@@ -316,22 +273,16 @@
     .move-right {
         transform: translateX(0);
     }
-
     .footer {
-        width: 35%;
+        width: 55%;
     }
 }
 
 @media (max-width: 600px) {
     .card {
-        width: 80vw;
+        width: 85vw;
         height: 90vw;
         .content {
-            .image {
-                img {
-                    width: 70%;
-                }
-            }
             .text {
                 .tools {
                     p {
@@ -355,22 +306,13 @@
     .move-right {
         transform: translateX(0);
     }
-
-    .footer {
-        width: 35%;
-    }
 }
 
 @media only screen and (hover: none) and (pointer: coarse) {
     .card {
-        width: 85vw;
+        width: 65vw;
         height: 100vw;
         .content {
-            .image {
-                img {
-                    width: 70%;
-                }
-            }
             .text {
                 .tools {
                     p {
@@ -396,9 +338,5 @@
 
     .move-right {
         transform: translateX(0);
-    }
-
-    .footer {
-        width: 35%;
     }
 }
