--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     &__title {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 600;
         background: rgb(141, 114, 225);
         background: linear-gradient(
@@ -24,7 +24,7 @@
     &__description {
         font-size: 2rem;
         font-weight: 600;
-        color: #fff;
+        color: #000;
         width: 50%;
         text-align: center;
         margin-top: 3rem;
@@ -47,17 +47,10 @@
 
     &__links {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        ul {
-            padding: 0;
-        }
-        p {
-            margin: 0;
-            font-size: 2rem;
-            color: #fff;
-        }
+        gap: 5rem;
     }
 
     h2 {
@@ -67,9 +60,40 @@
     &__purpose {
         font-size: 2rem;
         font-weight: 600;
-        color: #fff;
+        color: #000;
         width: 50%;
         text-align: center;
         margin-top: 3rem;
+    }
+
+    &__tools {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        // align-items: center;
+        h1 {
+            text-align: center;
+        }
+        .tool {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 5rem;
+            img {
+                height: 4vw;
+            }
+        }
+        gap: 5rem;
+        margin-bottom: 5rem;
+    }
+}
+
+@media (max-width: 1100px) {
+    .project {
+        &__links {
+            flex-direction: column;
+            gap: 20px;
+        }
     }
 }
