--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ a {
 img:not(#logo) {
     border-radius: 5px;
     border: 5px solid transparent;
-    border-image: url("/assets/images/border2.png") 100 round;
+    border-image: url("/assets/images/border.png") 100 round;
     border-image-width: 10px;
     border-image-outset: 5px;
 }
