--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -40,11 +40,10 @@ body {
         }
     }
     .content-left {
-        height: 75%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        gap: 20px;
+        gap: 3rem;
     }
     animation: appear 1s ease-in-out;
 }
@@ -60,18 +59,18 @@ body {
     }
 }
 
-@media (max-width: 1800px) {
-    .content {
-        a {
-            font-size: 1.5vw;
-        }
-        .link-content {
-            img {
-                width: 6vw;
-            }
-        }
-    }
-}
+// @media (max-width: 1800px) {
+//     .content {
+//         a {
+//             font-size: 1.5vw;
+//         }
+//         .link-content {
+//             img {
+//                 width: 6vw;
+//             }
+//         }
+//     }
+// }
 
 @media (max-width: 1500px) {
     .content {
@@ -86,18 +85,18 @@ body {
     }
 }
 
-@media (max-width: 1100px) {
-    .content {
-        a {
-            font-size: 2.5vw;
-        }
-        .link-content {
-            img {
-                width: 10vw;
-            }
-        }
-    }
-}
+// @media (max-width: 1100px) {
+//     .content {
+//         a {
+//             font-size: 2.5vw;
+//         }
+//         .link-content {
+//             img {
+//                 width: 10vw;
+//             }
+//         }
+//     }
+// }
 
 @media (max-width: 800px) {
     .content {
@@ -112,18 +111,18 @@ body {
     }
 }
 
-@media (max-width: 600px) {
-    .content {
-        a {
-            font-size: 4vw;
-        }
-        .link-content {
-            img {
-                width: 20vw;
-            }
-        }
-    }
-}
+// @media (max-width: 600px) {
+//     .content {
+//         a {
+//             font-size: 4vw;
+//         }
+//         .link-content {
+//             img {
+//                 width: 20vw;
+//             }
+//         }
+//     }
+// }
 
 @media only screen and (hover: none) and (pointer: coarse) {
     .content {
