--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -38,7 +39,6 @@ a {
             opacity: 0;
             transition: opacity 400ms, transform 400ms;
             transform: translate3d(-105%, 0, 0);
-            transform: translateY(100%);
         }
 
         &:hover::after {
