adding other projects + new arrow design + remove svg background on phone

--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -6,6 +6,7 @@
         font-size: 3rem;
         font-weight: 600;
         background: rgb(141, 114, 225);
+        text-align: center;
         background: linear-gradient(
             90deg,
             #5435b3 0%,
