--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -26,7 +26,7 @@
         font-size: 2rem;
         font-weight: 600;
         color: #000;
-        width: 50%;
+        width: 65%;
         text-align: center;
         margin-top: 3rem;
     }
@@ -37,7 +37,7 @@
         margin: 10px;
         margin-bottom: 50px;
         img {
-            width: 50%;
+            width: 60%;
             margin: 0 auto;
         }
         //center the image
@@ -62,7 +62,7 @@
         font-size: 2rem;
         font-weight: 600;
         color: #000;
-        width: 50%;
+        width: 60%;
         text-align: center;
         margin-top: 3rem;
     }
@@ -72,8 +72,11 @@
         flex-direction: column;
         justify-content: space-between;
         // align-items: center;
-        h1 {
-            text-align: center;
+        h2 {
+            font-size: 3rem;
+        }
+        h3 {
+            font-size: 2vw;
         }
         .tool {
             display: flex;
@@ -88,6 +91,9 @@
         gap: 5rem;
         margin-bottom: 5rem;
     }
+    h2 {
+        text-align: center;
+    }
 }
 
 @media (max-width: 1100px) {
@@ -95,6 +101,37 @@
         &__links {
             flex-direction: column;
             gap: 20px;
+        }
+        &__tools {
+            h3 {
+                font-size: 4vw;
+            }
+            .tool {
+                img {
+                    height: 7vw;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    .project {
+        h2 {
+            font-size: 1.3em;
+        }
+        p {
+            font-size: 0.75em;
+        }
+        &__tools {
+            h2 {
+                font-size: 2.5em;
+            }
+            .tool {
+                img {
+                    height: 2em;
+                }
+            }
         }
     }
 }
