--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,10 +50,10 @@ a {
 
 img:not(#logo) {
     border-radius: 5px;
-    border: 5px solid transparent;
-    border-image: url("/assets/images/border.png") 100 round;
+    border: 6px solid transparent;
+    border-image: url("assets/images/border.png") 100 round;
     border-image-width: 10px;
-    border-image-outset: 5px;
+    border-image-outset: 3px;
 }
 
 path {
