improving projects content + arrow up + buttons on single project component

--- a/src/app/link-image/link-image.component.html
+++ b/src/app/link-image/link-image.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="router">
-    <a [routerLink]="href" class="link">{{alt}}
+    <a [routerLink]="href" class="link-image">{{alt}}
         <img [src]="image" [alt]="alt" id="logo">
     </a>
 </div>
 <div *ngIf="!router">
-    <a [href]="href" target="_blank" class="link">{{alt}}
+    <a [href]="href" target="_blank" class="link-image">{{alt}}
         <img [src]="image" [alt]="alt" id="logo">
     </a>
 </div>
