--- a/src/app/go-up/go-up.component.scss
+++ b/src/app/go-up/go-up.component.scss
@@ -1,4 +1,4 @@
-.go-up {
+.bottom-right {
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -15,6 +15,12 @@
     &:hover {
         animation: bounce 0.5s ease-in-out infinite;
     }
+}
+
+#go-up {
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1.3s ease-in-out;
 }
 
 @media (max-width: 1000px) {
