--- a/src/app/link-image/link-image.component.scss
+++ b/src/app/link-image/link-image.component.scss
@@ -1,4 +1,4 @@
-.link {
+.link-image {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -8,5 +8,21 @@
         width: 30px;
         height: 30px;
     }
+    background: #fff;
     font-size: 1.75rem;
+    color: #8d72e1;
+    text-decoration: none;
+    font-size: 1.5rem;
+    border-radius: 20px;
+    &:hover {
+        background: #8d72e1;
+        color: #fff;
+    }
+    padding: 20px;
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    .link-image {
+        font-size: 1em;
+    }
 }
