--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,7 +9,7 @@
         font-weight: 600;
         color: #000;
         &.active {
-            color: #8d72e1;
+            color: rgb(12, 87, 148);
         }
     }
     background-color: rgb(255, 255, 255, 0.4);
