--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -15,13 +15,13 @@
 </div>
 <div *ngIf="!mobile">
     <svg class="background--custom" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <path fill="#75d0a6" fill-opacity="1" d="M-100 -100L200 -100L200 80L-100 80Z"
+        <path fill="#555B6E" fill-opacity="1" d="M-100 -100L200 -100L200 80L-100 80Z"
             style="animation: path0 8.771929824561402s linear infinite alternate;" />
-        <path fill="#58a100" fill-opacity="0.3" d="M-100 -100L200 -100L200 40L-100 40Z"
+        <path fill="#89B0AE" fill-opacity="0.3" d="M-100 -100L200 -100L200 40L-100 40Z"
             style="animation: path1 7.246376811594203s linear infinite alternate;" />
-        <path fill="#e880bc" fill-opacity="0.7" d="M-100 -100L200 -100L200 80L-100 80Z"
+        <path fill="#BEE3DB" fill-opacity="0.7" d="M-100 -100L200 -100L200 80L-100 80Z"
             style="animation: path2 7.936507936507937s linear infinite alternate;" />
-        <path fill="#78f6c0" fill-opacity="0.2" d="M-100 -100L200 -100L200 30L-100 30Z"
+        <path fill="#FAF9F9" fill-opacity="0.2" d="M-100 -100L200 -100L200 30L-100 30Z"
             style="animation: path3 9.803921568627452s linear infinite alternate;" />
     </svg>
 </div>
