--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -1,5 +1,5 @@
 .card {
-    margin-bottom: 80px;
+    margin-bottom: 50px;
     margin-top: 80px;
     width: 37vw;
     height: 30vw;
@@ -189,7 +189,7 @@
                         font-size: 1.1rem;
                     }
                 }
-                height: 15vw;
+                height: 22vw;
             }
         }
     }
@@ -212,7 +212,7 @@
                         font-size: 1.3rem;
                     }
                 }
-                height: 15vw;
+                height: 23vw;
             }
         }
     }
@@ -233,7 +233,7 @@
 
     .card {
         width: 70vw;
-        height: 70vw;
+        height: 80vw;
         .content {
             .text {
                 .tools {
@@ -261,29 +261,6 @@
     }
 }
 
-// @media (max-width: 800px) {
-//     .card {
-//         .content {
-//             .text {
-//                 .tools {
-//                     p {
-//                         font-size: 1.6rem;
-//                     }
-//                 }
-//                 height: 20vw;
-//             }
-//         }
-//     }
-
-//     .move-left {
-//         transform: translateX(0);
-//     }
-
-//     .move-right {
-//         transform: translateX(0);
-//     }
-// }
-
 @media (max-width: 600px) {
     .card {
         width: 90vw;
@@ -292,15 +269,15 @@
             .text {
                 .tools {
                     p {
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                     }
                     .tool {
                         li {
-                            font-size: 0.8rem;
+                            font-size: 0.7rem;
                         }
                     }
                 }
-                height: 20vw;
+                height: 26vw;
             }
         }
     }
@@ -311,6 +288,12 @@
 
     .move-right {
         transform: translateX(0);
+    }
+    .footer {
+        width: 70%;
+        padding: 5px;
+        margin-bottom: 75px;
+        font-size: 0.8rem;
     }
 }
 
@@ -336,6 +319,13 @@
                 font-size: 1.2rem;
             }
         }
+    }
+
+    .footer {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 75px;
+        font-size: 0.8rem;
     }
 
     .move-left {
