--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,5 @@
 <div class="projects">
     <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
 </div>
-<app-go-up id="go-up"></app-go-up>
+<app-go-up>
+</app-go-up>
