update on links + issue on phone + go up arrow bugged

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,4 +22,4 @@
         <img [src]="hobby.image" alt="{{hobby.title}}">
     </div>
 </div>
-<app-go-up id="go-up"></app-go-up>
+<app-go-up></app-go-up>
