--- a/src/app/go-up/go-up.component.scss
+++ b/src/app/go-up/go-up.component.scss
@@ -24,16 +24,24 @@
 }
 
 @media (max-width: 1000px) {
-    .go-up {
+    .bottom-right {
         width: 10vw;
         height: 10vw;
     }
 }
 
 @media (max-width: 600px) {
-    .go-up {
+    .bottom-right {
         width: 15vw;
         height: 15vw;
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    .bottom-right {
+        &:hover {
+            animation: none;
+        }
     }
 }
 
