--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -12,7 +12,7 @@ body {
     border-radius: 20px;
     padding: 20px;
     a {
-        color: #8d72e1;
+        color: #000;
         text-decoration: none;
         font-size: 1.4vw;
         width: 100%;
@@ -51,26 +51,12 @@ body {
 @keyframes appear {
     0% {
         opacity: 0;
-        // transform: translateY(50px);
     }
     100% {
         opacity: 1;
         transform: translateY(0);
     }
 }
-
-// @media (max-width: 1800px) {
-//     .content {
-//         a {
-//             font-size: 1.5vw;
-//         }
-//         .link-content {
-//             img {
-//                 width: 6vw;
-//             }
-//         }
-//     }
-// }
 
 @media (max-width: 1500px) {
     .content {
@@ -85,19 +71,6 @@ body {
     }
 }
 
-// @media (max-width: 1100px) {
-//     .content {
-//         a {
-//             font-size: 2.5vw;
-//         }
-//         .link-content {
-//             img {
-//                 width: 10vw;
-//             }
-//         }
-//     }
-// }
-
 @media (max-width: 800px) {
     .content {
         a {
@@ -110,20 +83,6 @@ body {
         }
     }
 }
-
-// @media (max-width: 600px) {
-//     .content {
-//         a {
-//             font-size: 4vw;
-//         }
-//         .link-content {
-//             img {
-//                 width: 20vw;
-//             }
-//         }
-//     }
-// }
-
 @media only screen and (hover: none) and (pointer: coarse) {
     .content {
         .link-content {
