--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -145,18 +145,23 @@
 @media only screen and (hover: none) and (pointer: coarse) {
     .project {
         h2 {
-            font-size: 2rem;
+            font-size: 1.75rem;
         }
         p {
             font-size: 0.75em;
         }
         &__tools {
+            flex-direction: column;
+            align-items: center;
+            h3 {
+                display: none;
+            }
             h2 {
                 font-size: 2.5em;
             }
             .tool {
                 img {
-                    height: 2em;
+                    height: 3em;
                 }
             }
             width: 65%;
