--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,6 +1,6 @@
 #photo {
-    width: 13rem;
-    height: 13rem;
+    width: 10vw;
+    height: 10vw;
     animation: appearAnimScale 1.5s ease-in-out;
 }
 
@@ -46,7 +46,7 @@
         font-size: 1.5rem;
         font-weight: 600;
         color: #333;
-        width: 20%;
+        width: 35vw;
         text-align: center;
         margin-top: 3rem;
     }
@@ -64,7 +64,11 @@
     overflow: hidden;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1400px) {
+    #photo {
+        width: 15vw;
+        height: 15vw;
+    }
     .content {
         flex-direction: column;
         width: 100%;
@@ -76,6 +80,13 @@
         #description {
             width: 50%;
         }
+    }
+}
+
+@media (max-width: 950px) {
+    #photo {
+        width: 22vw;
+        height: 22vw;
     }
 }
 
