--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -1,7 +1,7 @@
 .card {
     margin-bottom: 50px;
     margin-top: 80px;
-    width: 37vw;
+    width: 40vw;
     height: 30vw;
     border-radius: 30px;
     border: 5px solid transparent;
@@ -34,7 +34,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 70%;
+        width: 80%;
         .image img {
             width: 90%;
             object-fit: cover;
@@ -157,6 +157,28 @@
     align-items: center;
 }
 
+@media (max-width: 1800px) {
+    .card {
+        width: 35vw;
+        height: 32vw;
+        .content {
+            .text {
+                .tools {
+                    p {
+                        font-size: 1.4rem;
+                    }
+                    .tool {
+                        font-size: 1.1rem;
+                    }
+                }
+                height: 10vw;
+            }
+        }
+    }
+    .move-left {
+        transform: translateX(-11%);
+    }
+}
 @media (max-width: 1650px) {
     .card {
         width: 45vw;
@@ -299,8 +321,8 @@
 
 @media only screen and (hover: none) and (pointer: coarse) {
     .card {
-        width: 65vw;
-        height: 100vw;
+        width: 68vw;
+        height: 42vw;
         .content {
             .text {
                 .tools {
@@ -311,7 +333,7 @@
                         font-size: 1rem;
                     }
                 }
-                height: 35vw;
+                height: 12vw;
             }
         }
         .title {
@@ -319,10 +341,11 @@
                 font-size: 1.2rem;
             }
         }
+        margin-right: 50px;
     }
 
     .footer {
-        width: 100%;
+        width: 50vw;
         padding: 5px;
         margin-bottom: 75px;
         font-size: 0.8rem;
@@ -334,5 +357,39 @@
 
     .move-right {
         transform: translateX(0);
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) and (max-width: 900px) {
+    .card {
+        height: 65vw;
+        .content {
+            .text {
+                height: 18vw;
+            }
+        }
+        margin-right: 0;
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) and (max-width: 700px) {
+    .card {
+        height: 80vw;
+        .content {
+            .text {
+                height: 25vw;
+            }
+        }
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) and (max-width: 500px) {
+    .card {
+        height: 90vw;
+        .content {
+            .text {
+                height: 29vw;
+            }
+        }
     }
 }
