adding description in about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,12 @@
+<div class="desc-container">
+    <p id="description">
+        As a student developer, I am highly skilled in a variety of programming languages, including HTML/CSS, Python,
+        JavaScript, Java, and C. I am also proficient in using Git and SQL/PL SQL. I am a dedicated and hardworking
+        individual who is always looking to improve my skills and learn new technologies. I am seeking an internship
+        where I can gain valuable experience and work on challenging projects. Thank you for considering me for your
+        internship program.
+    </p>
+</div>
 <h1 id="languages-title" class="title-size">Languages & frameworks</h1>
 <div class="content">
     <div *ngFor="let language of languages" id="languages"
