--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -87,6 +87,28 @@ h1 {
     animation: appearOpacity 0.5s ease-in-out;
 }
 
+#description {
+    width: 50%;
+    text-align: center;
+    font-size: 1.5rem;
+    color: #000;
+    background: #fff;
+    border-radius: 20px;
+    border: 10px solid transparent;
+    border-image: url(../../assets/images/border.png) 100 round;
+    border-image-width: 20px;
+    border-image-outset: 10px;
+    padding: 15px;
+}
+
+.desc-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+}
+
 .disabled {
     opacity: 0;
 }
